--- a/latihan/latihan4_dashboard/app/src/main/res/drawable/custom3.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/drawable/custom3.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#6495ED" />
+    <solid android:color="@color/white" />
 
     <stroke android:width="2dp" android:color="#3A539B" />
 
