--- a/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,232 @@
         android:layout_height="100dp"
         android:background="#3a539b"
     />
+
+<!--    Custom 1-->
     
     <RelativeLayout
         android:layout_width="330dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/custom1"
     />
 
+<!--    Icon User-->
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/user"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="25dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
     />
+
+<!--    Icon Search-->
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:src="@drawable/search"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="15dp"
+    />
+
+<!--    Custom2-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:layout_marginTop="130dp"
+        android:background="@drawable/custom2"
+    >
+
+<!--        Custom3-->
+        <RelativeLayout
+            android:id="@+id/box"
+            android:layout_width="130dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/custom3"
+        />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/logo"
+        />
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="34dp"
+            android:layout_toEndOf="@id/logo"
+            android:text="@string/rp_299_999"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+        />
+
+<!--        Icon Takeaway-->
+        <ImageView
+            android:id="@+id/takeaway"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/box"
+            android:src="@drawable/takeaway"
+        />
+
+<!--        Icon wallet-->
+        <ImageView
+            android:id="@+id/wallet"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/takeaway"
+            android:src="@drawable/wallet"
+        />
+
+<!--        Icon Gift-->
+        <ImageView
+            android:id="@+id/kado"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@id/wallet"
+            android:src="@drawable/gift"
+            />
+
+<!--        Text Takeaway-->
+        <TextView
+            android:id="@+id/txtTakeaway"
+            android:layout_width="70dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="70dp"
+            android:layout_toEndOf="@id/box"
+            android:text="@string/takeaway"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+        />
+
+        <!--        Text Wallet-->
+        <TextView
+            android:id="@+id/txtWallet"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="70dp"
+            android:layout_toEndOf="@id/txtTakeaway"
+            android:text="@string/wallet"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+        />
+
+        <!--        Text Gift-->
+        <TextView
+            android:id="@+id/txtGift"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="70dp"
+            android:layout_toEndOf="@id/txtWallet"
+            android:text="@string/gift"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+        />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/brng"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="280dp"
+        android:background="@drawable/custom4"
+        >
+
+        <!--        Icon Basket-->
+        <ImageView
+            android:id="@+id/basket"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/basket"
+            android:background="@drawable/custom4"
+            />
+
+        <!--        Icon Location-->
+        <ImageView
+            android:id="@+id/location"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_toEndOf="@id/basket"
+            android:src="@drawable/location"
+            android:background="@drawable/custom4"
+        />
+
+        <!--        Icon Hamper-->
+        <ImageView
+            android:id="@+id/hamper"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_toEndOf="@id/location"
+            android:src="@drawable/hamper"
+            android:background="@drawable/custom4"
+        />
+
+        <TextView
+            android:id="@+id/txtBarang"
+            android:layout_width="50dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="53dp"
+            android:layout_marginTop="100dp"
+            android:text="@string/barang"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+        />
+
+        <TextView
+            android:id="@+id/txtLokasi"
+            android:layout_width="45dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="69dp"
+            android:layout_marginTop="100dp"
+            android:layout_toEndOf="@id/txtBarang"
+            android:text="@string/lokasi"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+        />
+
+        <TextView
+            android:id="@+id/txtHamper"
+            android:layout_width="55dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="73dp"
+            android:layout_marginTop="100dp"
+            android:layout_toEndOf="@id/txtLokasi"
+            android:text="@string/hamper"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+        />
+    </RelativeLayout>
 
 </RelativeLayout>
