--- a/latihan/latihan4_dashboard/app/src/main/res/drawable/custom3.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/drawable/custom3.xml
@@ -4,7 +4,7 @@
 
     <solid android:color="@color/white" />
 
-    <stroke android:width="2dp" android:color="#3A539B" />
+    <stroke android:width="2dp" android:color="#000000" />
 
     <padding
         android:top="5dp"
