--- a/latihan/latihan4_dashboard/app/src/main/res/drawable/custom5.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/drawable/custom5.xml
@@ -2,15 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/green_1" />
-
+    <solid android:color="@color/purple_1"/>
     <stroke
+        android:width="2dp"
         android:color="#000000"
-        android:width="3dp"
         />
 
     <padding
-        android:right="10dp"
-        android:bottom="10dp" />
-
+        android:bottom="5dp"
+    />
 </shape>
