--- a/latihan/latihan4_dashboard/app/src/main/res/values/colors.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF370083</color>
+    <color name="purple_1">#713bdb</color>
+    <color name="purple_2">#5057ac</color>
+    <color name="green_1">#25d798</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
