--- a/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     tools:context=".MainActivity">
 
@@ -304,5 +305,23 @@
             android:textStyle="bold"
         />
     </RelativeLayout>
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/green_1"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/button_menu"
+        />
+    
+    <FrameLayout
+        android:id="@+id/container_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_nav"
+    />
+
 
 </RelativeLayout>
