Latihan 4: Dashboard with Navigation Fragment

--- a/latihan/latihan4_dashboard/app/src/main/res/drawable/custom4.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/drawable/custom4.xml
@@ -10,7 +10,10 @@
         />
 
     <padding
+        android:top="10dp"
+        android:left="10dp"
+        android:bottom="10dp"
         android:right="10dp"
-        android:bottom="10dp" />
+        />
 
 </shape>
