--- a/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/layout/activity_main.xml
@@ -307,14 +307,15 @@
     </RelativeLayout>
 
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_nav"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_1"
-            android:layout_alignParentBottom="true"
-            app:menu="@menu/button_menu"
-        />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/green_1"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/button_menu"
+        app:itemIconTint="@color/black"
+    />
     
     <FrameLayout
         android:id="@+id/container_fragment"
