--- a/latihan/latihan4_dashboard/app/src/main/res/menu/button_menu.xml
+++ b/latihan/latihan4_dashboard/app/src/main/res/menu/button_menu.xml
@@ -19,7 +19,7 @@
     />
 
     <item
-        android:id="@+id/menu_chart"
+        android:id="@+id/menu_cart"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title=""
     />
